<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.smeanox.apps.webcomicreader.MainActivity">

    <item
        android:id="@+id/action_goto"
        android:orderInCategory="99"
        android:title="@string/action_goto"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_download_all"
        android:orderInCategory="100"
        android:title="@string/action_download_all"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_download_some"
        android:orderInCategory="101"
        android:title="@string/action_download_some"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_first"
        android:orderInCategory="103"
        android:title="@string/action_first"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_last"
        android:orderInCategory="104"
        android:title="@string/action_last"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="105"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"/>
</menu>
